@@ -1,0 +1,215 @@
+; $Id: sr-YU.ini Joomla! 1.6
+; Joomla! Project
+; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
+
+
+
+;Stepbar
+INSTL_STEPS_TITLE="Koraci"
+INSTL_STEP_1_LABEL="1 : Jezik"
+INSTL_STEP_2_LABEL="2 : Provjera prije instalacije"
+INSTL_STEP_3_LABEL="3 : Dozvola"
+INSTL_STEP_4_LABEL="4 : Baza"
+INSTL_STEP_5_LABEL="5 : FTP Konfiguracija"
+INSTL_STEP_6_LABEL="6 : Konfiguracija"
+INSTL_STEP_7_LABEL="7 : Kraj"
+
+;Language view
+INSTL_SELECT_LANGUAGE_TITLE="Odabir jezika"
+INSTL_SELECT_LANGUAGE_DESC="Molim odaberite jezik koji ćete koristiti u toku instalacije Joomla!."
+INSTL_LANGUAGE_TITLE="Izaberite jezik"
+INSTL_WARNJAVASCRIPT="Upozorenje! JavaScript mora biti omogućen za ispravnu instalaciju Joomla!"
+
+;Preinstall view
+INSTL_PRECHECK_TITLE="Provjera prije instalacije"
+INSTL_PRECHECK_FOR_VERSION="Provjera prije instalacije %s:"
+INSTL_PRECHECK_DESC="Ako bilo koja od ovih stavki nije podržana (obilježena kao <strong class="_QQ_"red"_QQ_">NE</strong>) molim vas da ih omogućite. Ukoliko to ne napravite vaša Joomla! instalacija možda neće ispravno raditi."
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE="Preporučena podešavanja:"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC="Preporučena podešavanja PHP-a za potpunu kompatibilnost sa Joomla.<br />Ipak, Joomla! će biti funkcionalna i ako podešavanja nisu identična preporučenima."
+INSTL_PRECHECK_DIRECTIVE="Direktiva"
+INSTL_PRECHECK_RECOMMENDED="Preporuka"
+INSTL_PRECHECK_ACTUAL="Trenutno"
+
+; Database view
+INSTL_DATABASE="Podešavanje baze podataka"
+INSTL_DATABASE_HOST_DESC="Uobičajeno je &quot;localhost&quot;"
+INSTL_DATABASE_HOST_LABEL="Ime servera"
+INSTL_DATABASE_NAME_DESC="Neki hostovi dozvoljavaju samo određena DB imena. Koristite prefiks tablice za različite Joomla! stranice."
+INSTL_DATABASE_NAME_LABEL="Ime baze podataka"
+INSTL_DATABASE_OLD_PROCESS_DESC="Postojeće kopije tablica prethodnih Joomla! instalacija će biti zamijenjene"
+INSTL_DATABASE_OLD_PROCESS_LABEL="Stara baza"
+INSTL_DATABASE_PASSWORD_DESC="Zbog sigurnosnih razloga obavezno koristite lozinku za mysql korisnički račun"
+INSTL_DATABASE_PASSWORD_LABEL="Lozinka"
+INSTL_DATABASE_PREFIX_DESC="Odaberite prefiks baze. Idealno je,tri ili četiri alfanumerička znaka i mora se završiti donjom crtom. Ne koristite &quot;bak_&quot; jer se taj prefiks koristi za rezervnu kopiju tablica."
+INSTL_DATABASE_PREFIX_LABEL="Prefiks tablice"
+INSTL_DATABASE_TYPE_DESC="Ovo je vjerovatno &quot;MySQLi&quot;"
+INSTL_DATABASE_TYPE_LABEL="Tip baze podataka"
+INSTL_DATABASE_USER_DESC="Nešto kao "_QQ_"root"_QQ_" ili korisničko ime dobijeno od hosta"
+INSTL_DATABASE_USER_LABEL="Korisničko ime"
+INSTL_DATABASE_TITLE="Podešavanje povezivanja"
+INSTL_DATABASE_DESC="<p>Instalacija Joomla!-e na vaš server zahtijeva 4 jednostavna koraka ...</p><p>Molim unesite hostname servera gdje bi Joomla! trebala biti instalirana.</p><p>Unesite MySQL korisničko ime, lozinku i ime baze koje će koristiti vaša Joomla stranica.</p><p>Unesite prefiks za tablice u ovoj Joomla! instalaciji. Odaberite što će se napraviti sa tablicama iz prethodne instalacije.</p>"
+
+;Filesystem view
+INSTL_AUTOFIND_FTP_PATH="Automatska pretraga FTP putanje"
+INSTL_FTP="FTP Konfiguracija"
+INSTL_FTP_DESC="<p>Na nekim serverima možda ćete morati osigurati FTP podatke za  završetak instalacije. Ako imate problema sa završetkom instalacije provjerite kod svog hosta, da li je to potrebno. </p><p>Iz sigurnosnih razloga, najbolje je da imate poseban  FTP korisnički račun sa pristupom samoinstalaciji Joomla! a ne cijelom web serveru. Vaš host može vam pomoći sa ovim.</p><p><b>Napomena:</b> Ako instalirate na Windows operativnom sustavu, FTP layer <strong>nije</strong> potreban.</p>"
+INSTL_FTP_ENABLE_LABEL="Omogući FTP"
+INSTL_FTP_HOST_LABEL="FTP Host"
+INSTL_FTP_PASSWORD_LABEL="FTP Lozinka"
+INSTL_FTP_PORT_LABEL="FTP Port"
+INSTL_FTP_ROOT_LABEL="FTP Osnovni direktorij"
+INSTL_FTP_SAVE_LABEL="Sačuvaj FTP lozinku"
+INSTL_FTP_TITLE="FTP Konfiguracija (<strong class="_QQ_"red"_QQ_">Opcionalno - većina korisnika može preskočiti ovaj korak - Kliknite na dalje za preskakanje ovog dijela</strong>)"
+INSTL_FTP_USER_LABEL="FTP korisničko ime"
+INSTL_SITE_NAME_LABEL="Ime stranice"
+INSTL_VERIFY_FTP_SETTINGS="Provjeri FTP postavke"
+INSTL_FTP_SETTINGS_CORRECT="Postavke ispravne"
+INSTL_FTP_USER_DESC="Upozorenje! Preporučljivo je da ovo ostavite prazno i da unesete vaše FTP korisničko ime prilikom svakog kopiranja datoteka."
+INSTL_FTP_PASSWORD_DESC="Upozorenje! Preporučljivo je da ovo ostavite prazno i da unesete vašu FTP lozinku prilikom svakog kopiranja datoteka."
+
+;Site View
+INSTL_SITE="Osnovne postavke"
+INSTL_ADMIN_EMAIL_LABEL="Vaša el. pošta"
+INSTL_ADMIN_PASSWORD_LABEL="Administratorska šifra"
+INSTL_ADMIN_PASSWORD2_LABEL="Potvrda administratorske šifre"
+INSTL_ADMIN_USER_LABEL="Admin korisničko ime"
+INSTL_SITE_NAME_TITLE="Ime stranice"
+INSTL_SITE_META_ADVANCED_SETTINGS="Napredna podešavanja - opcionalno"
+INSTL_SITE_NAME_DESC="Unesite ime vaše Joomla! stranice.<br />Opcionalno: Možete unijeti i meta opis i meta ključne reči za vašu stranicu."
+INSTL_SITE_METADESC_LABEL="Meta opis"
+INSTL_SITE_METADESC_TITLE_LABEL="Unesite opis stranice koji će koristiti web pretraživači. Općenito najviše 20 riječi je optimalno."
+INSTL_SITE_METAKEYS_LABEL="Meta ključne riječi"
+INSTL_SITE_METAKEYS_TITLE_LABEL="Unesite ključne riječi i fraze koje najbolje opisuju vašu stranicu. Odvojite ključne riječi zarezom,a fraze jednostrukim navodnicima."
+INSTL_SITE_CONF_TITLE="Potvrdi administratorsku el. poštu i šifru."
+INSTL_SITE_CONF_DESC="Unesite adresu vaše el.pošte. To je ujedno i adresa super administratora stranice.<br />Unesite lozinku i zatim je potvrdite u odgovarajućem polju. Možete promijeniti podrazumijevano korisničko ime <strong>admin</strong>. Ovo korisničko ime i lozinku ćete koristiti za pristup administratorskom kontrolnom panelu, po završenoj instalaciji.<br /> Ukoliko migrirate, možete ignorirati ovu sekciju. Vaša tekuća podešavanja će biti automatski migrirana."
+INSTL_SITE_LOAD_SAMPLE_TITLE="Učitaj primjere podataka"
+INSTL_SITE_LOAD_SAMPLE_DESC1="<strong>Važno!</strong>: Preporučljivo je da početnici i novi Joomla! korisnici instaliraju podrazumijevane primjere. Kliknite na gumb <i>prije</i> prelaska na slijedeću fazu."
+INSTL_SITE_LOAD_SAMPLE_DESC2="<strong>1. Primjeri:</strong> Prije nego što završite instalaciju, možete popuniti bazu podacima. Postoji dva načina da to napravite:"
+INSTL_SITE_LOAD_SAMPLE_DESC3="<strong>1a. Podrazumijevani primjeri</strong>. Da biste ovo napravili provjerite da li postoji Default English (GB) Sample Data u padajućoj listi i kliknite na gumb za instalaciju primjera."
+INSTL_SITE_LOAD_SAMPLE_DESC4="<strong>1b. Prilagođeni primjeri</strong>. Da biste ovo napravili odaberite raspoložive primjere i kliknite na gumb za instalaciju primjera."
+INSTL_SITE_LOAD_SAMPLE_DESC8="<strong>2. Čista (prazna) instalacija</strong>: Ukoliko ne želite primjere, unesite naziv stranice, administratorsku el. poštu i odaberite lozinku. Nakon toga pređite na završni korak klikom na <em>Dalje</em>."
+INSTL_SITE_SAMPLE_LABEL="Set primjera"
+INSTL_SITE_INSTALL_SAMPLE_LABEL="Instalacija primjera"
+INSTL_SITE_INSTALL_SAMPLE_DESC="Instalacija ovog je preporučljiva za početnike. Ovo će instalirati podrazumijevane primjere sadržaja koji se nalaze u instalacijskom paketu Joomla!."
+INSTL_SITE_SAMPLE_LOADED="Primjeri podataka uspješno instaliran!"
+INSTL_SAMPLE_DATA_SET="Default English (GB) Sample Data"
+
+;Complete view
+INSTL_COMPLETE="Kraj"
+INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS="Detalji administratorske prijave"
+INSTL_COMPLETE_DESC1="Kliknite na gumb Stranica da vidite vaš Joomla! web stranicu ili gumb Admin da biste se prijavili kao administrator."
+INSTL_COMPLETE_DESC2="Na Joomla! stranici za pomoć, pronaći ćete korak-po-korak vodič za instalaciju vašeg jezičnog paketa za Joomla! Naći ćete listu linkova sa raspoloživim jezičnim paketima."
+INSTL_COMPLETE_DESC3="Kliknite gumb na desnoj strani da biste otvorili stranicu za pomoć u novom prozoru."
+INSTL_COMPLETE_ERROR_FOLDER_ALREADY_REMOVED="Instalacijski direktorij je već obrisan."
+INSTL_COMPLETE_ERROR_FOLDER_DELETE="Instalacijski direktorij ne može biti obrisan. Molim, obrišite ga ručno."
+INSTL_COMPLETE_FOLDER_REMOVED="Instalacijski direktorij je uspješno obrisan"
+INSTL_COMPLETE_LANGUAGE_1="Joomla! na vašem jeziku?"
+INSTL_COMPLETE_LANGUAGE_2="Posjetite Joomla! Help Site za više informacija i preuzimanja."
+INSTL_COMPLETE_REMOVE_FOLDER="Obrišite instalacijski direktorij"
+INSTL_COMPLETE_REMOVE_INSTALLATION="MOLIM DA NE ZABORAVITE<br/>OBRISATI INSTALACIJSKI DIREKTORIJ<br />Nećete moći raditi dalje dok se ne ukloni instalacijski direktorij. Ovo je sigurnosna mogućnost Joomla!-e."
+INSTL_COMPLETE_TITLE="Čestitamo! Joomla! je instalirana!"
+
+;Database Model
+INSTL_DATABASE_COULD_NOT_CONNECT="Nije moguće povezati se na bazu. Povezivanje vraća broj: %s"
+INSTL_DATABASE_EMPTY_NAME=""
+INSTL_DATABASE_ERROR_BACKINGUP="Pojavila se greška prilikom kopiranja baze."
+INSTL_DATABASE_ERROR_CREATE="Pojavila se greška prilikom pravljenja baze %s.<br/> Korisnik možda nema dozvolu za kreiranje baze. Potrebna baza može biti instalirana odvojeno prije nego što nastavite sa instalacijom Joomla!-e."
+INSTL_DATABASE_ERROR_DELETE="Pojavile su se neke greške prilikom brisanja baze."
+INSTL_DATABASE_FIELD_VALUE_REMOVE="Obriši"
+INSTL_DATABASE_FIELD_VALUE_BACKUP="Rezervna kopija"
+INSTL_DATABASE_FIX_TOO_LONG="Prefiks MySQL tablice mora imati najviše 15 znaka"
+INSTL_DATABASE_INVALID_DB_DETAILS="Sadržaj baze je pogrešan i/ili prazan."
+INSTL_DATABASE_INVALID_MYSQL_VERSION="Potreban je MySQL 5.0.4 ili više za nastavak instalacije. Vaša verzija je: %s"
+INSTL_DATABASE_INVALID_TYPE="Molim odaberite tip baze"
+INSTL_DATABASE_NAME_TOO_LONG="Ime MySQL baze podataka mora imati najviše 64 znaka"
+INSTL_DATABASE_PREFIX_INVALID_CHARS="MySQL prefiks tablice mora početi slovom"
+INSTL_DATABASE_INVALID_NAME="MySQL verzija prije verzije 5.1.6 ne smije sadržavati točke ili druge "_QQ_"special"_QQ_" znakove u imenu. Vaša verzija je: %s"
+INSTL_DATABASE_NAME_INVALID_SPACES="MySQL ime baze i tablice ne može početi ili završiti se praznim mjestom (spaces)."
+INSTL_DATABASE_NAME_INVALID_CHAR="Nijedan MySQL identifier ne može da sadrži NUL ASCII(0x00)."
+INSTL_DATABASE_FILE_DOES_NOT_EXIST="Datoteka %s ne postoji"
+
+;controllers
+INSTL_COOKIES_NOT_ENABLED="Kolačići nisu dozvoljeni u vašem web pregledniku. Nećete moći instalirati aplikaciju ukoliko je ta opcija isključena."
+INSTL_HEADER_ERROR="Greška"
+
+;Helpers
+INSTL_PAGE_TITLE="Joomla! Internet instalacija"
+
+;Configuration model
+INSTL_ERROR_CONNECT_DB="Nije moguće povezati se na bazu. Povezivanje vraća broj: %s"
+INSTL_STD_OFFLINE_MSG="Stranica je trenutno u izradi .<br /> Molim pokušajte uskoro ponovo."
+
+;Filesystem model
+INSTL_FTP_INVALIDROOT="Naznačeni FTP direktorij nije direktorij Joomla! instalacije"
+INSTL_FTP_NOCONNECT="Nije moguće povezati se na FTP server"
+INSTL_FTP_NODELE="Funkcija "_QQ_"DELE"_QQ_" nije uspjela."
+INSTL_FTP_NODIRECTORYLISTING="Nije moguće dobiti spisak direktorija sa FTP  servera"
+INSTL_FTP_NOLIST="Funkcija "_QQ_"LIST"_QQ_" nije uspjela."
+INSTL_FTP_NOLOGIN="Nije moguća prijava na FTP server."
+INSTL_FTP_NOMKD="Funkcija "_QQ_"MKD"_QQ_" nije uspjela."
+INSTL_FTP_NONLST="Funkcija "_QQ_"NLST"_QQ_" nije uspjela."
+INSTL_FTP_NOPWD="Funkcija "_QQ_"PWD"_QQ_" nije uspjela."
+INSTL_FTP_NORETR="Funkcija "_QQ_"RETR"_QQ_" nije uspjela."
+INSTL_FTP_NORMD="Funkcija "_QQ_"RMD"_QQ_" nije uspjela."
+INSTL_FTP_NOROOT="Nije moguće pristupiti traženom FTP direktoriju"
+INSTL_FTP_NOSTOR="Funkcija "_QQ_"STOR"_QQ_" nije uspjela."
+INSTL_FTP_NOSYST="Funkcija "_QQ_"SYST"_QQ_" nije uspjela."
+INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER="Nemoguće automatsko prepoznavanje osnovnog direktorija FTP-a"
+
+;others
+INSTL_ADVANCED_SETTINGS="Napredne postavke"
+INSTL_BASIC_SETTINGS="Osnovne postavke"
+INSTL_CONFPROBLEM="Vaša konfiguracijska datoteka ili direktorij nisu podešeni za upis ili je došlo do problema prilikom kreiranja konfiguracijske datoteke. Morati prepisati slijedeći kod ručno. Kliknite na prostor za tekst da obiljžite cijeli tekst koda i onda Kopiraj i Dodaj u novu datoteku sa imenom configuration.php i iskopirajte to u osnovni direktorij vaše stranice."
+INSTL_DISPLAY_ERRORS="Prikaz grešaka"
+INSTL_ERROR_DB="Postoje greške prilikom objavljivanja baze: %s"
+INSTL_FILE_UPLOADS="Upload datoteke"
+INSTL_GNU_GPL_LICENSE="GNU Opća Javna Licenca"
+INSTL_INSTALLATION="Instalacija"
+INSTL_LICENSE="Licenca"
+INSTL_JSON_SUPPORT_AVAILABLE="JSON podrška"
+INSTL_MAGIC_QUOTES_RUNTIME="Magic Quotes Okruženje"
+INSTL_MB_LANGUAGE_IS_DEFAULT="MB jezik je podrazumijevan"
+INSTL_MB_STRING_OVERLOAD_OFF="MB String Overload Isključeno"
+INSTL_MYSQL_SUPPORT="MySQL podrška"
+INSTL_NOTICEMBLANGNOTDEFAULT="PHP mbstring jezik nije neutralan. Ovo možete namjestiti lokalno unošenjem <strong>php_value mbstring.language neutral</strong> u <code>.htaccess</code>."
+INSTL_NOTICEMBSTRINGOVERLOAD="PHP mbstring function overload je podešeno. Ovo može biti isključeno lokalno unošenjem <strong>php_value mbstring.func_overload 0</strong> u <code>.htaccess</code>."
+INSTL_NOTICEYOUCANSTILLINSTALL="<br />Još uvek možete nastaviti instalaciju, konfiguracijska podešavanja će biti prikazana na kraju. Morati ćete ručno iskopirati kod. Kliknite na teksta i obilježite ga, a zatim to iskopirate u novu tekstualnu datoteku. Nazovite ju 'configuration.php' i kopirajte ju u osnovni direktorij stranice (root direktorij)."
+INSTL_OUTPUT_BUFFERING="Izlazna međumemorija"
+INSTL_PARSE_INI_FILE_AVAILABLE="INI Parser podrška"
+INSTL_PHP_VERSION="PHP verzija"
+INSTL_REGISTER_GLOBALS="Register Globals funkcija"
+INSTL_SAFE_MODE="Safe Mode funkcija"
+INSTL_SESSION_AUTO_START="Automatsko pokretanje sesija"
+INSTL_WRITABLE="Omogućeno pisanje"
+INSTL_XML_SUPPORT="XML podrška"
+INSTL_ZLIB_COMPRESSION_SUPPORT="Podrška za Zlib kompresiju"
+
+;Global strings
+JADMINISTRATOR="Administrator"
+JADVANCED="Napredno"
+JCHECK_AGAIN="Ponovna provjera"
+JERROR="Greška"
+JGLOBAL_ISFREESOFTWARE="%s je slobodan softver pod <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU General Public License</a>."
+JINVALID_TOKEN="Najnoviji zahtijev je odbijen zato što sadrži pogrešan sigurnosni znak sigurnosti (token). Molimo vas da osvježite stranicu i pokušate ponovo."
+JNEXT="Dalje"
+JNO="Ne"
+JOFF="Isključeno"
+JON="Uključeno"
+JPREVIOUS="Prethodno"
+JSITE="Stranica"
+JUSERNAME="Korisničko ime"
+JYES="Da"
+
+; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Nije moguće učitati drajver baze: %s"
+JLIB_ENVIRONMENT_SESSION_EXPIRED="Vaša sesija je istekla, molim ponovo učitajte stranu."
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="Obavezno: %s"
+JLIB_FORM_VALIDATE_FIELD_INVALID="Pogrešno: %s"
+
+;Necessary for errors
+ADMIN_EMAIL="Vaša el. pošta"
+ADMIN_PASSWORD="Administratorska lozinka"
+ADMIN_PASSWORD2="Potvrda administratorske lozinke"
+SITE_NAME="Ime stranice"
